# learn-opengl

./: .gitignore  .gitmodules  LICENSE  README.md
exercises/1.getting-started/1.hello-triangle/exercise1/: CMakeLists.txt
exercises/1.getting-started/1.hello-triangle/exercise1/src/: main.cpp
exercises/1.getting-started/1.hello-triangle/exercise2/src/: main.cpp
exercises/1.getting-started/1.hello-triangle/exercise3/src/: main.cpp
exercises/1.getting-started/2.shaders/exercise1/: CMakePresets.json
exercises/1.getting-started/2.shaders/exercise1/src/: main.cpp
exercises/1.getting-started/2.shaders/exercise1/src/shaders/: myShader.frag  myShader.vert
exercises/1.getting-started/2.shaders/exercise2/src/: main.cpp
exercises/1.getting-started/2.shaders/exercise2/src/shaders/: myShader.vert
exercises/1.getting-started/2.shaders/exercise3/: CMakeLists.txt
exercises/1.getting-started/2.shaders/exercise3/resources/shaders/: myShader.frag
exercises/1.getting-started/2.shaders/exercise3/src/: main.cpp
exercises/1.getting-started/2.shaders/exercise3/src/shaders/: myShader.frag  myShader.vert
exercises/1.getting-started/3.textures/exercise1/src/: main.cpp
exercises/1.getting-started/3.textures/exercise2/: CMakePresets.json
exercises/1.getting-started/3.textures/exercise2/src/: main.cpp
exercises/1.getting-started/3.textures/exercise3/src/: main.cpp
exercises/1.getting-started/3.textures/exercise4/resources/shaders/: myShader.frag
exercises/1.getting-started/3.textures/exercise4/src/: main.cpp
exercises/1.getting-started/4.transformations/exercise1/src/: main.cpp
exercises/1.getting-started/4.transformations/exercise2/src/: main.cpp
exercises/1.getting-started/5.coordinate-systems/exercise1/src/: main.cpp
exercises/1.getting-started/5.coordinate-systems/exercise2/: CMakeLists.txt
exercises/1.getting-started/5.coordinate-systems/exercise2/src/: main.cpp
exercises/1.getting-started/5.coordinate-systems/exercise3/src/: main.cpp
exercises/1.getting-started/6.camera/exercise1/src/: main.cpp
exercises/1_getting-started/1_hello-triangle/exercise3/src/: main.cpp
exercises/1_getting-started/2_shaders/exercise1/resources/shaders/: myShader.vert
exercises/1_getting-started/2_shaders/exercise2/resources/shaders/: myShader.vert
exercises/1_getting-started/2_shaders/exercise3/src/: main.cpp
exercises/1_getting-started/3_textures/exercise1/src/: main.cpp
exercises/1_getting-started/3_textures/exercise2/src/: main.cpp
exercises/1_getting-started/3_textures/exercise3/src/: main.cpp
exercises/1_getting-started/3_textures/exercise4/: CMakePresets.json
exercises/1_getting-started/4_transformations/exercise1/src/: main.cpp
exercises/1_getting-started/4_transformations/exercise2/src/: main.cpp
exercises/1_getting-started/5_coordinate-systems/exercise3/src/: main.cpp
exercises/1_getting-started/6_camera/exercise1/src/: main.cpp
exercises/getting-started/hello-triangle/exercise-1/: CMakeLists.txt
exercises/getting-started/hello-triangle/exercise-1/src/: main.cpp
exercises/getting-started/hello-triangle/exercise-2/: CMakeLists.txt
exercises/getting-started/hello-triangle/exercise-2/src/: Main.cpp  main.cpp
exercises/getting-started/hello-triangle/exercise-3/: CMakeLists.txt
exercises/getting-started/hello-triangle/exercise-3/src/: main.cpp
exercises/getting-started/hello-triangle/exercise1/: CMakeLists.txt
exercises/getting-started/hello-triangle/exercise1/src/: main.cpp
exercises/getting-started/hello-triangle/exercise2/: CMakeLists.txt  CMakePresets.json
exercises/getting-started/hello-triangle/exercise2/src/: main.cpp
exercises/getting-started/hello-triangle/exercise3/: CMakeLists.txt
exercises/getting-started/hello-triangle/exercise3/src/: main.cpp
exercises/getting-started/shaders/exercise1/src/: shader.h
exercises/getting-started/shaders/exercise2/src/: main.cpp  shader.cpp  shader.h
exercises/getting-started/shaders/exercise3/src/: main.cpp  shader.cpp
projects/1.getting-started/1.hello-triangle/: CMakeLists.txt  CMakePresets.json
projects/1.getting-started/1.hello-triangle/src/: main.cpp
projects/1.getting-started/2.shaders/: CMakeLists.txt
projects/1.getting-started/2.shaders/resources/shaders/: myShader.vert
projects/1.getting-started/2.shaders/src/: main.cpp
projects/1.getting-started/2.shaders/src/shaders/: myShader.vert
projects/1.getting-started/3.textures/resources/shaders/: myShader.vert
projects/1.getting-started/3.textures/src/: main.cpp
projects/1.getting-started/4.transformations/: CMakeLists.txt
projects/1.getting-started/4.transformations/resources/shaders/: myShader.vert
projects/1.getting-started/4.transformations/src/: main.cpp
projects/1.getting-started/5.coordinate-systems/src/: main.cpp
projects/1.getting-started/6.camera/resources/shaders/: myShader.vert
projects/1.getting-started/6.camera/src/: main.cpp
projects/1_getting-started/1_hello-triangle/src/: main.cpp
projects/1_getting-started/3_textures/src/: main.cpp
projects/1_getting-started/4_transformations/src/: main.cpp
projects/1_getting-started/5_coordinate-systems/resources/shaders/: myShader.frag
projects/1_getting-started/5_coordinate-systems/src/: main.cpp
projects/1_getting-started/6_camera/src/: main.cpp
projects/exercises/getting-started/hello-triangle/exercise-1/: CMakeLists.txt
projects/exercises/getting-started/hello-triangle/exercise-3/: CMakeLists.txt
projects/getting-started/: .gitignore  CMakeLists.txt
projects/getting-started/hello-triangle/: CMakeLists.txt
projects/getting-started/hello-triangle/src/: main.cpp
projects/getting-started/shaders/: CMakeLists.txt  CMakePresets.json
projects/getting-started/shaders/src/: Main.cpp  main.cpp
projects/getting-started/src/: main.cpp  main.h
shared/: Shared.cmake
shared/cmake/: LearnOpenGL.cmake  SharedPresets.json
shared/include/debugout/: debugout.h
shared/include/excd/: debugout.h  debugout.hpp
shared/src/camera/: camera.cpp  camera.hpp
shared/src/shader/: shader.cpp  shader.hpp
(+6 files in other folders)
